--- a/index.ipynb
+++ b/index.ipynb
@@ -107,7 +107,9 @@
    "outputs": [],
    "source": [
     "two_x_squared = (2, 2)\n",
-    "find_term_derivative(two_x_squared) # (4, 1)\n"
+    "find_term_derivative(two_x_squared) # (4, 1)\n",
+    "\n",
+    "two_x_squared"
    ]
   },
   {
