--- a/index.ipynb
+++ b/index.ipynb
@@ -149,14 +149,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "four_x_cubed_minus_three_x = [(4, 3), (-3, 1)]\n",
+    "dragon = [(4, 3), (-3, 1)]\n",
     "\n",
     "\n",
-    "find_derivative(four_x_cubed_minus_three_x)  # [(12, 2), (-3, 0)]"
+    "find_derivative(four_x_cubed_minus_three_x)  # [(12, 2), (-3, 0)]\n",
+    "\n"
    ]
   },
   {
