--- a/index.ipynb
+++ b/index.ipynb
@@ -149,14 +149,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "dragon = [(4, 3), (-3, 1)]\n",
     "\n",
     "\n",
-    "find_derivative(four_x_cubed_minus_three_x)  # [(12, 2), (-3, 0)]\n",
+    "find_derivative(dragon)  # [(12, 2), (-3, 0)]\n",
     "\n"
    ]
   },
